# wingpu-bridge

./: .gitignore  AGENTS.md  README.md
config/: qwen_gguf_catalog.json  wingpu.defaults.toml
docs/: README.md  wingpu_admin_notes.md
mac/: mirror_remote_wsl_llama.sh  pyproject.toml
mac/src/wingpu_cli/: __init__.py  main.py
mac/src/wingpu_cli/resources/: __init__.py
mac/tests/: test_gateway_recovery.py
profiles/: README.md  template.json
remote-only/: README.md
windows/: bootstrap.ps1  harden-ssh-firewall.ps1  install-native-wsl-runtime.ps1  install-startup-task.ps1
wsl/: benchmark_qwen_transformers.py  boot.sh  bridge_ctl.py  bridge_db.py  chat_qwen_transformers.py  install.sh  run_qwen_transformers.py  setup_transformers_qwen.sh  worker.py
